--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,15 +1,30 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+html {
+  font-size: 62.5%;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
+    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 1.6rem;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
 h1 {
@@ -22,21 +37,20 @@ hr {
 
 button,
 input {
-  border-radius: 8px;
-  box-sizing: border-box;
   display: block;
-  font-size: 16px;
+  border-radius: 8px;
+  border: 1px solid black;
+  /* font-size: inherit; */
   margin: 8px 0;
   padding: 8px;
   width: 100%;
 }
 
-input {
-  border: 1px solid black;
+input::placeholder {
+  font-size: inherit;
 }
 
 button {
-  border: 1px solid black;
   cursor: pointer;
 }
 
@@ -59,52 +73,4 @@ button:disabled {
   min-width: 300px;
   max-width: 800px;
   padding: 32px;
-}
-
-.success {
-  background-color: #90ee90;
-  border-radius: 8px;
-  margin-bottom: 8px;
-  padding: 16px;
-  text-align: center;
-}
-
-.fail {
-  background-color: #ffcccb;
-  border-radius: 8px;
-  margin-bottom: 8px;
-  padding: 16px;
-  text-align: center;
-}
-
-.global-error {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  line-height: 0.2;
-}
-
-.global-error h1 {
-  color: #f00;
-  font-size: 8rem;
-  font-weight: bold;
-}
-
-.global-error p {
-  font-size: 1.5rem;
-  font-weight: 500;
-}
-
-.global-error button {
-  background-color: #fff;
-  border: 1px solid #000;
-  color: #000;
-  padding: 0.5rem 1rem;
-  cursor: pointer;
 }
