--- a/frontend/src/components/Notification.module.css
+++ b/frontend/src/components/Notification.module.css
@@ -48,13 +48,16 @@
   width: 26px;
 }
 
+.notification__message {
+  align-self: center;
+}
+
 .notification__button {
   border: none;
   padding: 0;
   margin: 0 0 0 20px;
-  display: inline-block;
   background-color: transparent;
-  width: fit-content;
+  width: max-content;
 }
 
 .notification__button-icon {
